unpackaged/main/default/objects/project_cloud__Ticket__c/project_cloud__Ticket__c.object-meta.xml
<CustomObject>
    <description>Ticket information that can be attached and moved between projects, phases and project tasks.  Each ticket can be assigned, managed and collaborated on with your team.</description>
    <label>Ticket</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>