unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Added_Duration2__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Added_Duration2__c</fullName>
    <inlineHelpText>How many days will be added to the project duration</inlineHelpText>
    <label>Added Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>