unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Added_Hours2__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Added_Hours2__c</fullName>
    <inlineHelpText>How many estimated hours are being added to project</inlineHelpText>
    <label>Added Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>