unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Added_Labor_Cost2__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Added_Labor_Cost2__c</fullName>
    <inlineHelpText>How much labor cost is being added to the project</inlineHelpText>
    <label>Added Labor Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>