unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Agenda_Item__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Agenda_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Agenda Item that this ticket is related to.</description>
    <inlineHelpText>Agenda Item that this ticket is related to.</inlineHelpText>
    <label>Agenda Item</label>
    <referenceTo>project_cloud__Agenda_Item__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>