unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Approval_Status2__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Approval_Status2__c</fullName>
    <inlineHelpText>The current status of the ticket approval</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>