unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Backout_Plan2__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Backout_Plan2__c</fullName>
    <inlineHelpText>Back Out Plan if change request is terminated</inlineHelpText>
    <label>Back Out Plan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>