unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Category2__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Category2__c</fullName>
    <inlineHelpText>Category of the ticket</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Measurement</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Remediation</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>