unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Change_Justification2__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Change_Justification2__c</fullName>
    <inlineHelpText>What is the business or client justification for the change request</inlineHelpText>
    <label>Justification for change</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>