unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Change_Type2__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Change_Type2__c</fullName>
    <inlineHelpText>The type of change request</inlineHelpText>
    <label>Change Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Timeline</fullName>
            </value>
            <value>
                <fullName>Scope</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>