unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a system field indicating which tickt this ticket was cloned from</description>
    <inlineHelpText>Shows the Name of a ticket that the Ticket was cloned from.</inlineHelpText>
    <label>Cloned From</label>
    <referenceTo>project_cloud__Ticket__c</referenceTo>
    <relationshipLabel>Cloned Tickets</relationshipLabel>
    <relationshipName>Cloned_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>