unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Description__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Description__c</fullName>
    <description>A description of what the ticket is about</description>
    <inlineHelpText>A description of what the ticket is about</inlineHelpText>
    <label>Description</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>