unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Due_Date__c</fullName>
    <inlineHelpText>This field will control what day the ticket will show up on the My Day schedule section.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>