unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Estimated_Hours__c</fullName>
    <inlineHelpText>This field is manually entered to determine the level of effort or amount of time this Ticket may take to complete.</inlineHelpText>
    <label>Estimated Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>