unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Immediate_Steps2__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Immediate_Steps2__c</fullName>
    <inlineHelpText>Immediate steps and/or updates to resolve the ticket</inlineHelpText>
    <label>Immediate steps/updates</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>