unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Implementation_Plan2__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Implementation_Plan2__c</fullName>
    <inlineHelpText>What is the proposed plan to implement the change request</inlineHelpText>
    <label>Plan for implementation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>