unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Inaction_Risk2__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Inaction_Risk2__c</fullName>
    <inlineHelpText>What is the risk to the business or client if the change request is not enacted</inlineHelpText>
    <label>Risk if not implemented</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>