unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__IsComplete__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__IsComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this ticket has been completed.</inlineHelpText>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>