unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Mitigation_Cost2__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Mitigation_Cost2__c</fullName>
    <inlineHelpText>The potential cost to mitigate the risk</inlineHelpText>
    <label>Cost to Mitigate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>