unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Potential_Impact2__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Potential_Impact2__c</fullName>
    <inlineHelpText>What is the potential impact of the ticket</inlineHelpText>
    <label>Potential Impact</label>
    <type>TextArea</type>
</CustomField>