unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Probability2__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Probability2__c</fullName>
    <inlineHelpText>Probability that the risk will occur</inlineHelpText>
    <label>Probability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>