unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Progress_Notes2__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Progress_Notes2__c</fullName>
    <inlineHelpText>The progress of the ticket</inlineHelpText>
    <label>Progress Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>