unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project_Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Project Phase that this ticket is related to. Each ticket can only be related to a single object, this is enforced by the TicketConfiguration trigger.</description>
    <inlineHelpText>Project Phase that this ticket is related to. Each ticket can only be related to a single object.</inlineHelpText>
    <label>Project Phase</label>
    <referenceTo>project_cloud__Project_Phase__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>