unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Project_Phase_CCPE_Ignore__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project_Phase_CCPE_Ignore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field will populate with the Project Phase name of the Project Task the Ticket is related too.</inlineHelpText>
    <label>Project Phase (Rollup)</label>
    <referenceTo>project_cloud__Project_Phase__c</referenceTo>
    <relationshipLabel>Ticket (Rollup)</relationshipLabel>
    <relationshipName>Ticket_Rollup</relationshipName>
    <type>Lookup</type>
</CustomField>