unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Resolution__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Resolution__c</fullName>
    <inlineHelpText>This picklist field will allow users to specify the resolution type of the Ticket.</inlineHelpText>
    <label>Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>project_cloud__Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Resolved</fullName>
                <default>true</default>
                <label>Resolved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>