unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Resolution_Needs2__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Resolution_Needs2__c</fullName>
    <inlineHelpText>What is needed to resolve this ticket</inlineHelpText>
    <label>What is needed</label>
    <type>TextArea</type>
</CustomField>