unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Response_Strategy2__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Response_Strategy2__c</fullName>
    <inlineHelpText>The response strategy for the risk</inlineHelpText>
    <label>Risk Response Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Avoid</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Migrate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>