unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Risk_Rating2__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Risk_Rating2__c</fullName>
    <formula>( 
  CASE( 
    project_cloud__Impact2__c, &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3 , &quot;4&quot;, 4, &quot;5&quot;, 5, 0 
  ) + 
  CASE( 
    project_cloud__Probability2__c,&quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3 , &quot;4&quot;, 4, &quot;5&quot;, 5, 0 
  ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The rating of the risk based on the impact and probability</inlineHelpText>
    <label>Risk Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>