unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Risk_Score2__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Risk_Score2__c</fullName>
    <formula>CASE(project_cloud__Risk_Rating2__c, 
  1, &quot;Low&quot;, 
  2, &quot;Low&quot;, 
  3, &quot;Low&quot;, 
  4, &quot;Low&quot;, 
  5, &quot;Medium&quot;, 
  6, &quot;Medium&quot;, 
  7, &quot;Medium&quot;, 
  8, &quot;High&quot;, 
  9, &quot;High&quot;, 
  10, &quot;Extreme&quot;, 
  Null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The score of the risk based on the impact and probability</inlineHelpText>
    <label>Risk Score</label>
    <type>Text</type>
</CustomField>