unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Risk_Type2__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Risk_Type2__c</fullName>
    <inlineHelpText>The type of risk</inlineHelpText>
    <label>Risk Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Market</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Regulatory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>