unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Show_Status_Report__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Show_Status_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field will determine if the Ticket will be exposed in the Status Report (only if a Status Report has been configured in the environment).</inlineHelpText>
    <label>Show on Status Report</label>
    <type>Checkbox</type>
</CustomField>