unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Spend_Saved2__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Spend_Saved2__c</fullName>
    <inlineHelpText>How much potential spend will be saved if the change request is enacted</inlineHelpText>
    <label>Spend saved from affected tasks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>