unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Status__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Status__c</fullName>
    <description>The current status of the ticket</description>
    <inlineHelpText>The current status of the ticket</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>