unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Tasks_Affected2__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Tasks_Affected2__c</fullName>
    <inlineHelpText>Which tasks on the project plan may be impacted by the change request</inlineHelpText>
    <label>Tasks Affected by Change</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>