unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Ticket_Name__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Ticket_Name__c</fullName>
    <description>A brief explanation of the ticket. Not to be confused with the description, which is a more detailed explanation of the problem and possible suggestions for a solution</description>
    <inlineHelpText>A brief explanation of the ticket. See the description for more detail</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>