unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Timeline_Impact2__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Timeline_Impact2__c</fullName>
    <inlineHelpText>What is the estimated effect on the project timeline and/or business infrastructure</inlineHelpText>
    <label>Effect on timeline and infrastructure</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>