unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Type__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Type__c</fullName>
    <description>An optional way to classify tickets, this classification is used to sort the tickets in the tree</description>
    <inlineHelpText>An optional way to classify tickets.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Action Item</fullName>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
            <value>
                <fullName>Issue</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>