unpackaged/main/default/objects/project_cloud__Ticket__c/fields/project_cloud__Worked_Hours__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Worked_Hours__c</fullName>
    <description>Sum of the hours completed on the ticket using the time entry Work objects. This is calculated by the trigger WorkConfiguration</description>
    <inlineHelpText>Sum of the hours completed on the ticket using time entry, this field shouldn&#39;t be manually filled and should be treated as a Read Only field.</inlineHelpText>
    <label>Entered Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>