unpackaged/main/default/objects/project_cloud__Ticket__c/listViews/project_cloud__All_Tickets.listView-meta.xml
<ListView>
    <fullName>project_cloud__All_Tickets</fullName>
    <columns>NAME</columns>
    <columns>project_cloud__Ticket_Name__c</columns>
    <columns>project_cloud__Type__c</columns>
    <columns>project_cloud__Status__c</columns>
    <columns>project_cloud__Priority__c</columns>
    <columns>project_cloud__Due_Date__c</columns>
    <columns>project_cloud__Related_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>